<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">btconsole</string>
    <string name="title_app">Connected Devices</string>
    <string name="action_settings">Settings</string>
    <string name="new_connection">New Connection</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="device_select_string">Select a device</string>
    <string name="title_activity_control">Control a Device</string>

    <!-- Control Panel -->
    <string name="start_string">Start</string>
    <string name="stop_string">Stop</string>
    <string name="info_string">Request Info</string>
    <string name="status_string">Request Status</string>
    <string name="debug_string">Request Debug</string>
    <string name="fwupdate_string">Update Firmware</string>
    <string name="apply_string">Apply Changes</string>
    <string name="data_string">Collect Data</string>
    <string name="tcpip_unconnected_string">Not Serving Data</string>
    <string name="log_string">Log</string>
    <string name="collectdata">Collect Data</string>
    <string name="startipserver_string">Start TCP/IP Server</string>
    <string name="stopipserver_string">Stop TCP/IP Server</string>

</resources>